<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D00FF10"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/et_firstname"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_contact"
        android:hint="@string/firstname"
        android:inputType="textCapSentences"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        tools:layout_editor_absoluteX="24dp"
        android:text="@string/muhammad"
        />


    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_contact"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_firstname"
        android:paddingHorizontal="16dp"
        android:textSize="16sp"
        android:hint="@string/lastname"
        android:textColor="@color/black"
        android:inputType="textCapSentences"
        android:layout_marginTop="12dp"
        android:maxLength="20"
        android:maxLines="1"
        android:text="@string/muhammad"
        />


    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_contact"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_lastname"
        android:paddingHorizontal="16dp"
        android:textSize="16sp"
        android:hint="@string/phone_number"
        android:textColor="@color/black"
        android:inputType="phone"
        android:layout_marginTop="12dp"
        android:text="@string/test_phone"
        />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_contact"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_phone"
        android:paddingHorizontal="16dp"
        android:textSize="16sp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:inputType="numberPassword"
        android:layout_marginTop="12dp"
        android:text="@string/test_password"
        />


    <TextView
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/sign_up"
        android:background="@drawable/bg_main_button"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/btn_all_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/all_ready_exist"
        android:textColor="#2196F3"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>