<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/buttonBack"
        style="@style/BackButton"
        android:background="?android:selectableItemBackgroundBorderless"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_contact"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/buttonBack"
        app:layout_constraintBottom_toBottomOf="@id/buttonBack"/>


    <EditText
        android:id="@+id/inputName"
        style="@style/EditText"
        android:hint="@string/firstname"
        android:maxLength="15"
        android:maxLines="1"
        android:lines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"/>


    <EditText
        android:id="@+id/inputLastName"
        style="@style/EditText"
        android:hint="@string/lastname"
        android:maxLength="15"
        android:maxLines="1"
        android:lines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputName"
        app:layout_constraintVertical_bias="0.2"/>


    <EditText
        android:id="@+id/inputPhone"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:hint="@string/phone"
        android:maxLength="13"
        android:maxLines="1"
        android:lines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLastName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEdit"
        style="@style/ActionButton"
        android:layout_marginBottom="28dp"
        android:text="@string/edit"
        android:enabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


