<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_contact"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingHorizontal="16dp"
        android:text="+998947331227"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_contact"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_phone"
        android:paddingHorizontal="16dp"
        android:textSize="16sp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:inputType="numberPassword"
        android:layout_marginTop="12dp"
        android:text="20022002"
        />


    <TextView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/log_in"
        android:background="@drawable/bg_main_button"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        />

    <TextView
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:textColor="#7E7A7A"
        />

</androidx.constraintlayout.widget.ConstraintLayout>